--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<style>
+    h1 {
+        color: blue;
+    }
+</style>
+
 <h1>Hello from Rapidisima</h1>
 <h2>This is a test to learn github pages</h2>
 <h3>Carlos Luis Camacho!</h3>
+<h3>Diego Luis Camacho!</h3>
 
 
